[project]
name = "t-me"
version = "0.1.0"
description = "FastAPI сервис для конвертации Telegram ссылок t.me/ в диплинки tg://"
readme = "README.md"
license = "LICENSE"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard]>=0.136.1",
]

[project.urls]
Repository = "https://github.com/austnv/t-me"
